# TourNLP_ACSC

./: .coverage  .gitignore  README.md  extract_categories.py  generate_dataset.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/core/: logger.py
app/routes/: common.py  generate.py
app/schemas/: generate_schema.py
app/services/: llm_generator.py
category/: category_extracter.py  category_set.json  extractor_runner.py  updater.py
common/: schema.py  utils.py
data/: generate_data.py
data/processed/: category_set.json  dev.jsonl  labeled_reviews.jsonl  test.jsonl  train.jsonl
dataset/: dataset_generator.py  generator_runner.py
legacy/: finetune.py  generate_dataset.py
legacy/category/: __init__.py  category_extractor.py
legacy/common/: schema.py  utils.py
legacy/dataset/: dataset_generator.py
legacy/llm/: prompt_templete.py
legacy/model/: finetune_runner.py
legacy/model/config/: distilkobert.json  kcelectra-base-22.json  koelectra-base-v2.json  koelectra-base-v3.json  koelectra-base.json  koelectra-small-v3.json  koelectra-small.json
llm/: client.py  prompt_templete.py  schema.py  test.py
model/: __init__.py  dataset.py  evaluation.py  finetune_runner.py  train.py
model/config/: kobert.json  koelectra-base-v2.json  koelectra-base-v3.json  koelectra-small-v2.json
model/src/: evaluation.py  processor.py  test.py  train.py
scripts/: extract_categories.py  generate_dataset.py  model.py
tests/: conftest.py
tests/routes/: test_generate.py
tests/services/: test_llm_generator.py
(+4 files in other folders)
