[project]
name = "piknlp"
version = "0.1.0"
description = ""
authors = [
    {name = "HuSngYn",email = "huseongyoon@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "ollama (>=0.4.8,<0.5.0)",
    "openai (>=1.79.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term --cov-report=html"

[tool.poetry]
name = "piknlp-backend"
version = "0.1.0"
description = "Sentiment-based travel recommender system"
authors = ["HuSngYn <huseongyoon@gmail.com>"]
packages = [
    { include = "app" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.5"
mypy = "^1.15.0"
httpie = "^3.2.4"
httpx = "^0.28.1"
pytest-asyncio = "^0.26.0"
asgi-lifespan = "^2.1.0"
coverage = "^7.8.0"
pytest-cov = "^6.1.1"

